--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payoo Mfs</title>
-    
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -25,19 +24,19 @@
                           <label class="label">
                             <span class="label-text">Phone Number</span>
                           </label>
-                          <input type="number" placeholder="Enter your phone Number" class="input input-bordered" required />
+                          <input id="phone-number" type="number" placeholder="Enter your phone Number" class="input input-bordered" required />
                         </div>
                         <div class="form-control">
                           <label class="label">
                             <span class="label-text">Pin</span>
                           </label>
-                          <input type="password" placeholder="your pin" class="input input-bordered" required />
+                          <input type="password" placeholder="your pin" class="input input-bordered" autocomplete="off" required />
                           <label class="label">
                             <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
                           </label>
                         </div>
                         <div class="form-control mt-6">
-                          <button class="btn btn-primary">Login</button>
+                          <button id="button-login" class="btn btn-primary">Login</button>
                         </div>
                       </form>
                     </div>
@@ -47,5 +46,8 @@
             </div>
           </div>
     </main>
+<script src="js/login.js"></script>
+
+
 </body>
 </html>
